[package]
name = "typst-lsp"
version = "0.7.2"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
jaeger = ["opentelemetry", "opentelemetry-jaeger", "tracing-opentelemetry"]

[dependencies]
anyhow = "1.0.71"
async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
chrono = { version = "0.4.24", default-features = false, features = [
    "std",
    "clock",
] }
comemo = "0.3"
dirs = "5.0"
elsa = { git = "https://github.com/nvarner/elsa.git" }
futures = "0.3"
if_chain = "1.0"
indexmap = "2.0.0"
internment = "0.7.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
memmap2 = "0.7"
once_cell = "1.0"
opentelemetry = { version = "0.19.0", optional = true }
opentelemetry-jaeger = { version = "0.18.0", features = [
    "rt-tokio",
    "isahc_collector_client",
    "collector_client",
], optional = true }
parking_lot = "0.12.1"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["stream"] }
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
siphasher = "0.3"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-lsp = "0.19.0"
tracing = "0.1.37"
tracing-opentelemetry = { version = "0.19.0", optional = true }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "std",
    "registry",
    "fmt",
] }
typst = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
walkdir = "2.3"

[dev-dependencies]
temp-dir = "0.1.11"
