[package]
name = "typst-lsp"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
default = ["remote-packages", "rustls-tls"]

jaeger = ["opentelemetry", "opentelemetry-jaeger", "tracing-opentelemetry"]

# Enable support for web access to search and download remote packages from a
# repository. At present, that means only `@preview` packages listed at
# https://typst.app/docs/packages/.
remote-packages = ["reqwest", "async-compression"]

# Choose the TLS implementation. Using `native-tls` provides better integration
# with the user's system. However, on Linux, this means linking to OpenSSL,
# which can be difficult when cross compiling. On the other hand, cross
# compiling `rustls` is not as hard, and as a pure-Rust alternative, may be
# prefered regardless of compilation woes.
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]

[dependencies]
# Keep typst version in sync with string in `main.rs`
typst = { git = "https://github.com/typst/typst.git", tag = "v0.7.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.7.0" }

anyhow = "1.0.71"
bpaf = { version = "0.9.4", features = ["bright-color"] }
chrono = { version = "0.4.24", default-features = false, features = [
    "std",
    "clock",
] }
comemo = "0.3"
dirs = "5.0"
elsa = "1.9.0"
futures = "0.3"
if_chain = "1.0"
indexmap = "2.0.0"
internment = "0.7.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
memmap2 = "0.7"
once_cell = "1.0"
parking_lot = "0.12.1"
percent-encoding = "2.3.0"
regex = "1.8.1"
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
siphasher = "0.3"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tower-lsp = "0.20.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "std",
    "registry",
    "fmt",
] }
walkdir = "2.3"

# jaeger
opentelemetry = { version = "0.20.0", optional = true }
opentelemetry-jaeger = { version = "0.19.0", features = [
    "rt-tokio",
    "isahc_collector_client",
    "collector_client",
], optional = true }
tracing-opentelemetry = { version = "0.20.0", optional = true }

# remote-packages
reqwest = { version = "0.11.18", default-features = false, features = [
    "stream",
], optional = true }
async-compression = { version = "0.4.1", features = [
    "tokio",
    "gzip",
], optional = true }

[dev-dependencies]
temp-dir = "0.1.11"
